@@ -15,6 +15,8 @@ dev
 ; Additions
 
 * Added phpunit.php runner in the tests directory
+* Added Diff\Comparer\ValueComparer interface with CallbackComparer and StrictComparer implementations
+* Added MapPatcher::setValueComparer to facilitate patching maps containing objects
 
 ; Removals
 
